--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="icon" href="/static/favicon.ico" type="image/x-icon"/>
     <meta charset="utf-8">
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
   </head>
   <body style="width: calc(100vw)">
